Topdown character changes part 2

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,9 +105,9 @@ CurrentPosGridSize=4
 CurrentRotGridMode=GridMode_DivisionsOf360
 
 [MRU]
-MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem1=/Game/b024899h/ParticleEffectsTest
-MRUItem2=/Game/Levels/Demo
+MRUItem0=/Game/Levels/Demo
+MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem2=/Game/b024899h/ParticleEffectsTest
 MRUItem3=/Game/Levels/Area1-Rework
 MRUItem4=/Game/Levels/Area2-Market
 MRUItem5=/Game/Levels/texturedzoo
@@ -281,7 +281,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -304,7 +304,7 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/Levels/Demo
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -3207,9 +3207,9 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
 Character="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Character=
+Character="\"Object.ParticleSystems\" \"Object.ParticleSystems\" "
 Pawn="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Pawn=
+Pawn="\"Object.ParticleSystems\" \"Object.ParticleSystems\" "
 None=======
 None=======
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3223,10 +3223,10 @@ AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Percept
 TestPawn_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
-Controller="\"Object.Default.DebugColour\" "
+Controller=
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 TopDownCharacter_C="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-TopDownCharacter_C=
+TopDownCharacter_C="\"Object.ParticleSystems\" \"Object.ParticleSystems\" "
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3358,7 +3358,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
-UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 None=======
 None=======
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -4099,7 +4099,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -4202,26 +4202,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Blueprints/I_DeathSystem
-MRUItem1=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem2=/Game/Josh/AnimationsTest/AttackMontages/Slash_Montage
-MRUItem3=/Game/Josh/Skinned_Player_Skeleton
-MRUItem4=/Game/Josh/AnimationsTest/AttackMontages/Heavy_Uppercut_Montage
-MRUItem5=/Game/Josh/TestRoom/Running_Anim
-MRUItem6=/Game/Josh/1HHumanIdleRun_BP
-MRUItem7=/Game/Josh/HumanAnimBP
-MRUItem8=/Game/Josh/HoundFolder/HoundAnim_BP
-MRUItem9=/Game/Josh/HoundFolder/HoundIdleRun_BS
-MRUItem10=/Game/b024899h/ParticleEffectsTest
-MRUItem11=/Game/Levels/Demo
-MRUItem12=/Game/c024816h/SmallHealthPotion
-MRUItem13=/Game/GW000979/ItemEnum
-MRUItem14=/Game/Will/Destrucible_Barrel
-MRUItem15=/Game/Models/finishedassets/barrel/LP_barrel
-MRUItem16=/Game/Models/finishedassets/barrel/LP_barrel_DM
-MRUItem17=/Game/Levels/Area1-Rework
-MRUItem18=/Game/Josh/AnimationsTest/Heavy_Slam_Montage
-MRUItem19=/Game/Josh/AnimationsTest/Heavy_Slam
+MRUItem0=/Game/Levels/Demo
+MRUItem1=/Game/TopDownBP/Interfaces/PlayerInt
+MRUItem2=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem4=/Game/TopDownBP/Blueprints/I_DeathSystem
+MRUItem5=/Game/Josh/AnimationsTest/AttackMontages/Slash_Montage
+MRUItem6=/Game/Josh/Skinned_Player_Skeleton
+MRUItem7=/Game/Josh/AnimationsTest/AttackMontages/Heavy_Uppercut_Montage
+MRUItem8=/Game/Josh/TestRoom/Running_Anim
+MRUItem9=/Game/Josh/1HHumanIdleRun_BP
+MRUItem10=/Game/Josh/HumanAnimBP
+MRUItem11=/Game/Josh/HoundFolder/HoundAnim_BP
+MRUItem12=/Game/Josh/HoundFolder/HoundIdleRun_BS
+MRUItem13=/Game/b024899h/ParticleEffectsTest
+MRUItem14=/Game/c024816h/SmallHealthPotion
+MRUItem15=/Game/GW000979/ItemEnum
+MRUItem16=/Game/Will/Destrucible_Barrel
+MRUItem17=/Game/Models/finishedassets/barrel/LP_barrel
+MRUItem18=/Game/Models/finishedassets/barrel/LP_barrel_DM
+MRUItem19=/Game/Levels/Area1-Rework
 
 [WidgetTemplatesExpanded]
 Extra=False
