--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,11 +105,11 @@ CurrentPosGridSize=4
 CurrentRotGridMode=GridMode_DivisionsOf360
 
 [MRU]
-MRUItem0=/Game/Levels/Area1-Rework
+MRUItem0=/Game/Levels/Demo
 MRUItem1=/Game/Levels/MainMenu
-MRUItem2=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem3=/Game/b024899h/ParticleEffectsTest
-MRUItem4=/Game/Levels/Demo
+MRUItem2=/Game/Levels/Area1-Rework
+MRUItem3=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem4=/Game/b024899h/ParticleEffectsTest
 MRUItem5=/Game/Levels/Area2-Market
 MRUItem6=/Game/Levels/texturedzoo
 MRUItem7=/Game/Levels/MechanicsLevel
@@ -213,7 +213,7 @@ HUD_Proto_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCa
 PlayerControl_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 CoolDownComponent_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 RangedAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
-BaseAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+BaseAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 BaseArmour_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 BaseAccessory_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 Calc Offence Stats=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
@@ -255,6 +255,7 @@ BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 HumanAnimBP_C=
 Destrucible_Barrel_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 Spawn Item=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
+BossAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -279,7 +280,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/AIAgent
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -302,11 +303,18 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/Levels/Demo
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
+OpenAssetsAtExit=/Game/AIAgent/Proto_controller.Proto_controller
+OpenAssetsAtExit=/Game/Chloe/UI/Start_Menu.Start_Menu
+OpenAssetsAtExit=/Game/EnemyAgent/CorruptedSlave.CorruptedSlave
+OpenAssetsAtExit=/Game/EnemyAgent/EnemyData.EnemyData
+OpenAssetsAtExit=/Game/AIAgent/BossAI.BossAI
+OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
+OpenAssetsAtExit=/Game/AIAgent/WayPoint/WaypointManager.WaypointManager
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3047,6 +3055,125 @@ SkyLight.Tags=True
 SkyLight.Cooking=True
 SkyLight.Actor=True
 WorldSettings.Cooking=True
+SoundManager_C.Tick=True
+SoundManager_C.Default=True
+SoundManager_C.Rendering=True
+SoundManager_C.Replication=True
+SoundManager_C.Input=True
+SoundManager_C.Actor=True
+MainMenuMode_C.Tick=True
+MainMenuMode_C.Classes=True
+MainMenuMode_C.Game=True
+MainMenuMode_C.GameMode=True
+CorruptedSlave_C.Stats=True
+CorruptedSlave_C.Status=True
+CorruptedSlave_C.Bleed=True
+CorruptedSlave_C.Stun=True
+CorruptedSlave_C.Crystalise=True
+CorruptedSlave_C.Blind=True
+CorruptedSlave_C.Poison=True
+CorruptedSlave_C.LifeSteal=True
+CorruptedSlave_C.Drop=True
+CorruptedSlave_C.Variable=True
+CorruptedSlave_C.Sockets=True
+CorruptedSlave_C.ComponentReplication=True
+CorruptedSlave_C.Events=True
+BaseAI_C.Drop=True
+SoundManager_C.TransformCommon=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+BossAI_C.Tick=True
+BossAI_C.Default=True
+BossAI_C.Stats=True
+BossAI_C.Status=True
+BossAI_C.Bleed=True
+BossAI_C.Stun=True
+BossAI_C.Crystalise=True
+BossAI_C.Blind=True
+BossAI_C.Poison=True
+BossAI_C.LifeSteal=True
+BossAI_C.Drop=True
+BossAI_C.Character=True
+BossAI_C.Camera=True
+BossAI_C.Pawn=True
+BossAI_C.Rendering=True
+BossAI_C.Replication=True
+BossAI_C.Input=True
+BossAI_C.Actor=True
+REINST_BossAI_C_223.Tick=True
+REINST_BossAI_C_223.None=True
+REINST_BossAI_C_223.Default=True
+REINST_BossAI_C_223.Stats=True
+REINST_BossAI_C_223.Status=True
+REINST_BossAI_C_223.Bleed=True
+REINST_BossAI_C_223.Stun=True
+REINST_BossAI_C_223.Crystalise=True
+REINST_BossAI_C_223.Blind=True
+REINST_BossAI_C_223.Poison=True
+REINST_BossAI_C_223.LifeSteal=True
+REINST_BossAI_C_223.Drop=True
+REINST_BossAI_C_223.Character=True
+REINST_BossAI_C_223.Camera=True
+REINST_BossAI_C_223.Pawn=True
+REINST_BossAI_C_223.Rendering=True
+REINST_BossAI_C_223.Replication=True
+REINST_BossAI_C_223.Input=True
+REINST_BossAI_C_223.Actor=True
+BTDecorator_TagCooldown.FlowControl=True
+BTDecorator_TagCooldown.Decorator=True
+BTDecorator_TagCooldown.Description=True
+BTDecorator_TimeLimit.FlowControl=True
+BTDecorator_TimeLimit.Decorator=True
+BTDecorator_TimeLimit.Description=True
+BTDecorator_ConditionalLoop.Blackboard=True
+BTDecorator_ConditionalLoop.Description=True
+BossFightManager_C.TransformCommon=True
+BossFightManager_C.Rendering=True
+BossFightManager_C.Input=True
+BossFightManager_C.Actor=True
+ParticleSystemComponent.Variable=True
+ParticleSystemComponent.TransformCommon=True
+ParticleSystemComponent.Sockets=True
+ParticleSystemComponent.Particles=True
+ParticleSystemComponent.EmitterActions=True
+ParticleSystemComponent.Attachment=True
+ParticleSystemComponent.Lighting=True
+ParticleSystemComponent.Rendering=True
+ParticleSystemComponent.LOD=True
+ParticleSystemComponent.Tags=True
+ParticleSystemComponent.ComponentReplication=True
+ParticleSystemComponent.Activation=True
+ParticleSystemComponent.Cooking=True
+ParticleSystemComponent.Events=True
+ParticleSystemComponent.Materials=True
+Waypoint_C.Tick=True
+Waypoint_C.Rendering=True
+Waypoint_C.Replication=True
+Waypoint_C.Input=True
+Waypoint_C.Actor=True
+WaypointManager_C.Tick=True
+WaypointManager_C.Rendering=True
+WaypointManager_C.Replication=True
+WaypointManager_C.Input=True
+WaypointManager_C.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3138,7 +3265,7 @@ WorldSettings.Cooking=True
 /Game/CombatInterface/I_Combat.I_Combat=0
 /Game/Models/weapons/crystal_sword.crystal_sword=0
 /Game/Models/Ben/gate.gate=0
-/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=0
 /Game/T019847G/Leveling/I_AbilityComponent.I_AbilityComponent=0
 /Game/TopDownBP/Blueprints/I_PlayerStatus.I_PlayerStatus=0
 /Game/T019847G/FadingMeshes/FadeComponent.FadeComponent=1
@@ -3216,6 +3343,8 @@ None=======
 /Game/Will/661661560381781.661661560381781=1
 /Game/Levels/MainMenu.MainMenu:PersistentLevel.MainMenu=1
 /Game/Will/Pickaxe-SoundBible_com-1937292892.Pickaxe-SoundBible_com-1937292892=0
+/Game/TopDownBP/Blueprints/SoundManager.SoundManager=1
+/Game/TopDownBP/Blueprints/MainMenuMode.MainMenuMode=1
 
 [PluginBrowser]
 InstalledPlugins=DialoguePlugin
@@ -3226,20 +3355,20 @@ EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
-PrimitiveComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
-SceneComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
-ActorComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
-DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
+DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
 Character="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Character=
+Character="\"Object.CharacterHealth\" \"Object.CharacterHealth\" "
 Pawn="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Pawn=
+Pawn="\"Object.CharacterHealth\" \"Object.CharacterHealth\" "
 None=======
 None=======
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3276,7 +3405,7 @@ InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[16]\" "
 BaseWeapon_C="\"Object.WeaponStats\" \"Object.WeaponStats\" "
 TestPawn3_C=
 StaticMeshComponent=
-MeshComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
+MeshComponent=
 TopDownCharacterTest_C=
 ShaneToyeSprintTest_C=
 BoxComponent=
@@ -3313,7 +3442,7 @@ Pause_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Obj
 Start_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CoolDownComponent_C="\"Object.\" \"Object.\" "
 RangedAI_C=
-BaseAI_C=
+BaseAI_C="\"Object.CharacterHealth\" \"Object.CharacterHealth\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BaseArmour_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
@@ -3355,6 +3484,7 @@ Spawn Item="\"Struct.BarrelLocation\" "
 MoviePlayerSettings="\"Object.Movies.StartupMovies\" "
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 WorldSettings="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Broadphase.BroadphaseSettings.MBPBounds\" "
+BossAI_C="\"Object.Invulnerability\" \"Object.Invulnerability\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3389,7 +3519,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
-UNR=../../../../../../Users/wstan/Desktop/Github/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 None=======
 None=======
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -4143,7 +4273,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -4246,26 +4376,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Area1-Rework
-MRUItem1=/Game/Models/Aaron/campfire-aaroncrossley-12-01-19
-MRUItem2=/Game/Will/Destrucible_Barrel
-MRUItem3=/Game/Will/Miner
-MRUItem4=/Game/Will/Pickaxe-SoundBible_com-1937292892
-MRUItem5=/Game/Will/661661560381781
-MRUItem6=/Game/Levels/MainMenu
-MRUItem7=/Game/NewBlueprint
-MRUItem8=/Game/Dialogs/MyDialogueWidget
-MRUItem9=/Game/b024899h/ParticleEffectsTest
-MRUItem10=/Game/Levels/Demo
-MRUItem11=/Game/c024816h/SmallHealthPotion
-MRUItem12=/Game/GW000979/ItemEnum
-MRUItem13=/Game/Models/finishedassets/barrel/LP_barrel
-MRUItem14=/Game/Models/finishedassets/barrel/LP_barrel_DM
-MRUItem15=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem16=/Game/Josh/AnimationsTest/Heavy_Slam_Montage
-MRUItem17=/Game/Josh/AnimationsTest/Heavy_Slam
-MRUItem18=/Game/Josh/AnimationsTest/Heavy_Uppercut
-MRUItem19=/Game/Josh/HeavyHumanIdleRun_BS
+MRUItem0=/Game/AIAgent/Proto_controller
+MRUItem1=/Game/AIAgent/WayPoint/WaypointManager
+MRUItem2=/Game/AIAgent/WayPoint/Waypoint
+MRUItem3=/Game/AIAgent/BaseAI
+MRUItem4=/Game/AIAgent/I_AI
+MRUItem5=/Game/AIAgent/AttackPlayer
+MRUItem6=/Game/AIAgent/ProtoTree
+MRUItem7=/Game/AIAgent/ProtoAI
+MRUItem8=/Game/AIAgent/BossAI
+MRUItem9=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem10=/Game/EnemyAgent/CorruptedSlave
+MRUItem11=/Game/EnemyAgent/EnemyData
+MRUItem12=/Game/Levels/Demo
+MRUItem13=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem14=/Game/Chloe/UI/Start_Menu
+MRUItem15=/Game/Levels/MainMenu
+MRUItem16=/Game/TopDownBP/Blueprints/MainMenuMode
+MRUItem17=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem18=/Game/TopDownBP/Blueprints/SoundManager
+MRUItem19=/Game/Levels/Area1-Rework
 
 [WidgetTemplatesExpanded]
 Extra=False
