--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -293,7 +293,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -322,9 +322,6 @@ LastLevel=/Game/Levels/Area2-MarketMeshStart
 CleanShutdown=True
 None=======
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/c024816h/CurePotion.CurePotion
-OpenAssetsAtExit=/Game/T015548H/Cloth/Cloth.Cloth
-OpenAssetsAtExit=/Game/Models/finishedassets/oven/Brick_1_Mat.Brick_1_Mat
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -5835,22 +5832,22 @@ bFilterTranslucent=True
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Models/finishedassets/oven/Brick_1_Mat
-MRUItem1=/Game/Models/Aaron/campfire-aaroncrossley-12-01-19
-MRUItem2=/Game/H011646h/Crystals/NewFolder/DomedConnector
-MRUItem3=/Game/H011646h/Crystals/NewFolder/ConnectorEndCap
-MRUItem4=/Game/H011646h/Crystals/NewFolder/ClosedGate
-MRUItem5=/Game/H011646h/Crystals/NewFolder/BaseWall
-MRUItem6=/Game/H011646h/Crystals/NewFolder/OpenGate
-MRUItem7=/Game/H011646h/Crystals/NewFolder/Material__11
-MRUItem8=/Game/T015548H/Cloth/HCloth3
-MRUItem9=/Game/T015548H/Cloth/HCloth2
-MRUItem10=/Game/T015548H/Cloth/Hanging_Cloth_Unwrapped_Chris_12-06-2019
-MRUItem11=/Game/T015548H/Cloth/Cloth3
-MRUItem12=/Game/T015548H/Cloth/Cloth1
-MRUItem13=/Game/T015548H/Cloth/Cloth2
-MRUItem14=/Game/T015548H/Cloth/Cloth
-MRUItem15=/Game/Levels/Area2-MarketMeshStart
+MRUItem0=/Game/Levels/Area2-MarketMeshStart
+MRUItem1=/Game/Models/finishedassets/oven/Brick_1_Mat
+MRUItem2=/Game/Models/Aaron/campfire-aaroncrossley-12-01-19
+MRUItem3=/Game/H011646h/Crystals/NewFolder/DomedConnector
+MRUItem4=/Game/H011646h/Crystals/NewFolder/ConnectorEndCap
+MRUItem5=/Game/H011646h/Crystals/NewFolder/ClosedGate
+MRUItem6=/Game/H011646h/Crystals/NewFolder/BaseWall
+MRUItem7=/Game/H011646h/Crystals/NewFolder/OpenGate
+MRUItem8=/Game/H011646h/Crystals/NewFolder/Material__11
+MRUItem9=/Game/T015548H/Cloth/HCloth3
+MRUItem10=/Game/T015548H/Cloth/HCloth2
+MRUItem11=/Game/T015548H/Cloth/Hanging_Cloth_Unwrapped_Chris_12-06-2019
+MRUItem12=/Game/T015548H/Cloth/Cloth3
+MRUItem13=/Game/T015548H/Cloth/Cloth1
+MRUItem14=/Game/T015548H/Cloth/Cloth2
+MRUItem15=/Game/T015548H/Cloth/Cloth
 MRUItem16=/Game/Levels/texturedzoo
 MRUItem17=/Game/Models/finishedassets/sacraficetable/Sacra_Table
 MRUItem18=/Game/c024816h/CurePotion
