Fixes/add particle systems

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,8 +105,8 @@ CurrentRotGridMode=GridMode_DivisionsOf360
 
 [MRU]
 MRUItem0=/Game/Levels/Demo
-MRUItem1=/Game/b024899h/ParticleEffectsTest
-MRUItem2=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem2=/Game/b024899h/ParticleEffectsTest
 MRUItem3=/Game/Levels/Area1-Rework
 MRUItem4=/Game/Levels/Area2-Market
 MRUItem5=/Game/Levels/texturedzoo
@@ -256,6 +256,7 @@ Destrucible_Barrel_C=TopDownCharacter_C.Collision.Collision,StructProperty.Defau
 Spawn Item=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 MovementComponent=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 HoundAnim_BP_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+Start_Menu_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -280,7 +281,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/b024899h/Particle_Effects/Poision
+ContentBrowserTab1.SelectedPaths=/Game/b024899h/Particle_Effects
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -309,9 +310,8 @@ LastLevel=/Game/Levels/Demo
 CleanShutdown=True
 None=======
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/AIAgent/DerivedClasses/HoundEnemyAI.HoundEnemyAI
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode
 OpenAssetsAtExit=/Game/AIAgent/BossAI.BossAI
-OpenAssetsAtExit=/Game/EnemyAgent/CorruptedSlave.CorruptedSlave
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3323,6 +3323,10 @@ REINST_HoundEnemyAI_C_834.Rendering=True
 REINST_HoundEnemyAI_C_834.Replication=True
 REINST_HoundEnemyAI_C_834.Input=True
 REINST_HoundEnemyAI_C_834.Actor=True
+ParticleSpriteEmitter.Particle=True
+ParticleSpriteEmitter.Cascade=True
+ParticleSpriteEmitter.Significance=True
+CanvasPanel.Layout=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3491,13 +3495,15 @@ None=======
 /Game/Josh/HoundFolder/HoundAnim_BP.HoundAnim_BP=0
 /Game/Josh/HoundFolder/HoundIdleRun_BS.HoundIdleRun_BS=0
 /Game/b024899h/Particle_Effects/Loot_Beams/1_Green_Common/HealEffect.HealEffect=0
+/Game/b024899h/Particle_Effects/Hurricane/Swing_P.Swing_P=1
+/Game/b024899h/Particle_Effects/SummoningPortal/SummonCircle3.SummonCircle3=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
+Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -3511,9 +3517,9 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
 Character="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Character=
+Character="\"Object.CrystalEmpowerBonusDamageMultiplier\" \"Object.CrystalEmpowerBonusDamageMultiplier\" "
 Pawn="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Pawn=
+Pawn="\"Object.CrystalEmpowerBonusDamageMultiplier\" \"Object.CrystalEmpowerBonusDamageMultiplier\" "
 None=======
 None=======
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3563,10 +3569,10 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PlayerController=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -3579,7 +3585,7 @@ HybridController_C="\"Object.Default.DebugColour\" "
 BehaviorTreeGraphNode_Root=
 BehaviorTreeGraphNode=
 AIGraphNode=
-EdGraphNode="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+EdGraphNode=
 RangeFinder_C=
 RangedController_C="\"Object.Default.DebugColour\" "
 ProgressBar="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -3622,7 +3628,7 @@ ThirdPerson_AnimBP_C=
 AnimInstance=
 HumanAnimBP_C=
 DestructibleMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DebrisParameters.ValidBounds\" "
-SkeletalMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DebrisParameters.ValidBounds\" "
+SkeletalMesh=
 DestructibleComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
 SkinnedMeshComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
 Spawn Item="\"Struct.BarrelTransform\" "
@@ -3634,7 +3640,7 @@ AnimGraphNode_Base="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.L
 K2Node="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 ParticleModuleLifetime="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
 ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
-ParticleModule="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
+ParticleModule=
 ParticleModuleSpawn="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSize="\"Object.Size.StartSize.Distribution\" "
@@ -4447,6 +4453,11 @@ LastLogListing=PIE
 /Game/Models/Armour/LeatherCowlHelmet=(R=0.000000,G=0.500000,B=0.079121,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/b024899h/Particle_Effects/SummoningPortal/SummonCircle3.SummonCircle3;
+RecentlyPlaced=/Game/b024899h/Particle_Effects/SummoningPortal/SummonCircle4.SummonCircle4;
+RecentlyPlaced=/Game/b024899h/Particle_Effects/SummoningPortal/SummonCircle2.SummonCircle2;
+RecentlyPlaced=/Game/b024899h/Particle_Effects/SummoningPortal/SummonCircle.SummonCircle;
+RecentlyPlaced=/Game/b024899h/Particle_Effects/Hurricane/Swing_P.Swing_P;
 RecentlyPlaced=/Game/b024899h/Particle_Effects/Poision/PoisionPE.PoisionPE;
 RecentlyPlaced=/Game/b024899h/Particle_Effects/Loot_Beams/1_Green_Common/HealEffect.HealEffect;
 RecentlyPlaced=/Game/AIAgent/DerivedClasses/HoundEnemyAI.HoundEnemyAI;
@@ -4462,11 +4473,6 @@ RecentlyPlaced=/Game/Models/Armour/Amulet_Ben_Wilkinson/Amulet/necklace__ben_wil
 RecentlyPlaced=/Game/Models/Armour/Amulet/necklace__ben_wilkinson.necklace__ben_wilkinson;
 RecentlyPlaced=/Game/T019847G/FadingMeshes/NewFade_M.NewFade_M;
 RecentlyPlaced=/Game/Materials/Green.Green;
-RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
-RecentlyPlaced=/Game/AIAgent/AIbot.AIbot;
-RecentlyPlaced=/Game/AIAgent/DerivedClasses/RangedAI.RangedAI;
-RecentlyPlaced=/Game/Models/finishedassets/chains/Chains_Unw.Chains_Unw;
-RecentlyPlaced=/Game/AIAgent/DerivedClasses/HybridAI.HybridAI;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -4519,26 +4525,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AIAgent/AttackPlayer
-MRUItem1=/Game/CombatInterface/I_Combat
-MRUItem2=/Game/AIAgent/BaseAI
-MRUItem3=/Game/EnemyAgent/CorruptedSlave
-MRUItem4=/Game/b024899h/Particle_Effects/Loot_Beams/1_Green_Common/HealEffect
-MRUItem5=/Game/Levels/Demo
-MRUItem6=/Game/b024899h/ParticleEffectsTest
-MRUItem7=/Game/AIAgent/BossAI
-MRUItem8=/Game/Josh/HoundFolder/HoundIdleRun_BS
-MRUItem9=/Game/AIAgent/DerivedClasses/HoundEnemyAI
-MRUItem10=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem11=/Game/TopDownBP/Interfaces/PlayerInt
-MRUItem12=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem13=/Game/TopDownBP/Blueprints/I_DeathSystem
-MRUItem14=/Game/Josh/AnimationsTest/AttackMontages/Slash_Montage
-MRUItem15=/Game/Josh/Skinned_Player_Skeleton
-MRUItem16=/Game/Josh/AnimationsTest/AttackMontages/Heavy_Uppercut_Montage
-MRUItem17=/Game/Josh/TestRoom/Running_Anim
-MRUItem18=/Game/Josh/1HHumanIdleRun_BP
-MRUItem19=/Game/Josh/HumanAnimBP
+MRUItem0=/Game/Josh/Skinned_Player_Skeleton
+MRUItem1=/Game/Josh/Skinned_Player
+MRUItem2=/Game/Chloe/UI/Start_Menu
+MRUItem3=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem4=/Game/Levels/Demo
+MRUItem5=/Game/AIAgent/BossAI
+MRUItem6=/Game/b024899h/Particle_Effects/SummoningPortal/SummonCircle3
+MRUItem7=/Game/b024899h/Particle_Effects/Hurricane/Swing_P
+MRUItem8=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem9=/Game/AIAgent/AttackPlayer
+MRUItem10=/Game/CombatInterface/I_Combat
+MRUItem11=/Game/AIAgent/BaseAI
+MRUItem12=/Game/EnemyAgent/CorruptedSlave
+MRUItem13=/Game/b024899h/Particle_Effects/Loot_Beams/1_Green_Common/HealEffect
+MRUItem14=/Game/b024899h/ParticleEffectsTest
+MRUItem15=/Game/Josh/HoundFolder/HoundIdleRun_BS
+MRUItem16=/Game/AIAgent/DerivedClasses/HoundEnemyAI
+MRUItem17=/Game/TopDownBP/Interfaces/PlayerInt
+MRUItem18=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem19=/Game/TopDownBP/Blueprints/I_DeathSystem
 
 [WidgetTemplatesExpanded]
 Extra=False
